<resources>
    <string name="app_name">Text Checker</string>

    <string name="checktext">Check Text</string>

    <string name="text">Text</string>
    <string name="text_info">Files,Texts</string>

    <string name="scan">Scan</string>
    <string name="scan_info">Camera,Album</string>

    <string name="history">History</string>
    <string name="history_info">Checked history</string>

    <string name="checklist">Check list</string>
    <string name="checklist_info">Check, Compare texts</string>

    <string name="tutorial">Tutorial</string>
    <string name="tutorial_info">How to use?</string>

    <string name="donate">Donate</string>
    <string name="donate_info">Support us</string>

    <string name="aboutapp">About app</string>
    <string name="aboutapp_info">What is this for?</string>

    <string name="app_version">Checker 1.0</string>
    <string name="developer_info">Copyright &#169; Designed and Developed by Algha</string>
    <string name="title_activity_input">Check Text</string>
    <string name="title_activity_output">Result</string>
    <string name="title_activity_scan">Import an image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_activity_check_list">Check list</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_donate">Donate</string>
    <string name="preview_activity_title">Preview Image</string>

    <!-- Strings related to Settings -->

    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

</resources>
